# streamlit_github_analyzer

./: .gitignore  analyze_github.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
entities/: analyze_github_repo.py
